@@ -16,6 +16,12 @@ cdrkit (1.1.1) UNRELEASED; urgency=low
   [ Thomas Schmidt ]
   * workaround for older libmagic API
 
+  [ Peter Samuelson ]
+  * expand where genisoimage looks for the config file - same places
+    mkisofs looks plus a few more.  (We may wish to trim this back some.)
+  * major cleanups to genisoimage.1 manpage; split out the part about
+    .genisoimagerc to a new page genisoimagerc.5.
+
  -- Eduard Bloch <blade@debian.org>  Sat,  2 Dec 2006 23:05:33 +0100
 
 cdrkit (1.1.0) RELEASED; urgency=medium
